[package]
name = "rust-on-cart"
version = "0.1.0"
edition = "2025"

[dependencies]
anyhow = "1.0"
parking_lot = "0.12"
once_cell = "1.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }


[lib]
name = "cart"
path = "src/lib.rs"

[lib.proc-macro]
name = "cart_macros"
path = "src/macros.rs"
proc-macro = true
